solved scroll bug on small nav menu

--- a/src/App.css
+++ b/src/App.css
@@ -179,9 +179,6 @@ button {
   #navParent {
     display: none;
   }
-  html {
-    padding: 15px;
-  }
 }
 
 @media screen and (min-width: 550px) {
